# poulpy-js

./: .dockerignore  .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: e2e.yml
apps/client/: vite.config.ts
apps/client/src/: App.tsx
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: compute.spec.ts
apps/server/src/: index.ts
crates/squid-napi/: index.d.ts
demo/: next.config.ts  package.json  vercel.json
demo/src/app/: globals.css
demo/src/app/api/session/: route.ts
demo/src/app/api/session/[id]/: route.ts
demo/src/app/api/session/[id]/add/: route.ts
demo/src/components/: Demo.tsx
demo/src/components/atoms/: Card.tsx  NumberPad.tsx
demo/src/components/steps/: Step1Keygen.tsx  Step2Encrypt.tsx  Step3Evaluate.tsx  Step4Decrypt.tsx
demo/src/hooks/: useFhe.ts
demo/src/lib/: fhe-types.ts  sessions.ts
tests/: index.spec.ts
