[workspace]
resolver = "2"
members = [
    "crates/poulpy-wasm",
    "crates/poulpy-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["poulpy-js contributors"]

[workspace.dependencies]
squid = { git = "https://github.com/cedoor/squid.git", rev = "fcb6c21994849083331241b7cd436284f27ef0ab", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
